Correct horizontal overflow sizing

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,11 +11,18 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+#root {
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .loader {
@@ -24,6 +31,8 @@ code {
   background: rgb(188, 255, 200);
   z-index: 1000;
   position: absolute;
+  left: 0;
+  top: 0;
   pointer-events: none;
   background: linear-gradient(
     0deg,
