--- a/frontend/src/styles/testimony.scss
+++ b/frontend/src/styles/testimony.scss
@@ -30,11 +30,6 @@ body {
   font-weight: 600;
 }
 
-#root {
-  overflow-x: hidden;
-  width: 100vw;
-}
-
 input {
   font-family: 'Open Sans', sans-serif;
   font-weight: 600;
